--- a/applic/views/scripts/profile/user.phtml
+++ b/applic/views/scripts/profile/user.phtml
@@ -187,7 +187,7 @@ if(@$this->user['type'] == 1 && $this->data['photo'] && file_exists('img/trainer
 
 </p><!-- ****************** KOOLITAMISKOGEMUSED END-->
            	    
-	    <p><b>Mida väärtustad koolitustegevusejuures:</b> ?php echo @$this->training_info['aboutTeaching'] ?></p>
+	    <p><b>Mida väärtustad koolitustegevusejuures:</b> <?php echo @$this->training_info['aboutTeaching'] ?></p>
 	    <p><b>Kuidas iseloomustad end koolitajana:</b> <?php echo @$this->training_info['about'] ?></p>
 	    <p><b>Olulisim professionaalne ettevalmistus koolitajaks:</b> <?php echo @$this->training_info['professionalTrainings'] ?></p>
 	    <p><b>Millistel teemadel, sihtgruppide lõikes jne oled huvitatud enesetäiendusest:</b> <?php echo @$this->training_info['interests'] ?></p>
