--- a/applic/views/scripts/index/event.phtml
+++ b/applic/views/scripts/index/event.phtml
@@ -1,4 +1,3 @@
-
 <div id="header">
 </div>
 
@@ -133,7 +132,7 @@
         <form id="submitForm" method="link" action="assign/<?php echo $this->event['id']; ?>"> <!--<a href="assign/<?php echo $this->event['id']; ?>" >-->
             <input type="submit" value="" />
         </form>
-    <a id="facebook" title="send to Facebook" href="http://www.facebook.com/sharer.php?s=100&p[title]=<?php echo $this->event['title']; ?>&p[summary]=<?php echo $this->event['description']; ?>&p[url]=http://mitteformaalne.ee/kalendar/event/<?php echo $this->event['id']; ?>&p[images][0]=http://mitteformaalne.ee/img/events/<?php echo @$this->event['logo'] ?>" target="_blank"></a>
+    <a id="facebook" title="send to Facebook" href="http://www.facebook.com/sharer.php?s=100&p[title]=<?php echo $this->event['title']; ?>&p[summary]=Leidsin mitteformaalsest veebist huvitava koolituse.&p[url]=http://mitteformaalne.ee/kalendar/event/<?php echo $this->event['id']; ?>&p[images][0]=http://mitteformaalne.ee/img/events/<?php echo @$this->event['logo'] ?>" target="_blank"></a>
     <a href="http://twitter.com/home?status=Leidsin põneva koolituse Mitteformaalsest veebist: http://mitteformaalne.ee/kalendar/event/<?php echo $this->event['id']; ?>&p[images][0]=http://mitteformaalne.ee/img/events/<?php echo @$this->event['logo'] ?>" id="twitter"></a>
         <p>Jaga koolitust sõpradega :)</p>
     </div>
